[package]
name = "pickr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inquire = { version = "0.4.0", features = ["date", "editor"] }
chrono = "0.4"
strum = { version = "0.21", features = ["derive"] }
enum-display-derive = "0.1.1"
